--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -13,13 +13,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.4",
-    "@angular/cdk": "^15.1.4",
+    "@agm/core": "^3.0.0-beta.0",
+    "@angular-material-extensions/google-maps-autocomplete": "^9.0.3",
+    "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.1.4",
     "@angular/compiler": "^15.1.4",
     "@angular/core": "^15.1.4",
-    "@angular/forms": "^15.1.4",
-    "@angular/material": "^15.1.4",
+    "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/forms": "^15.2.9",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.1.4",
     "@angular/platform-browser-dynamic": "^15.1.4",
     "@angular/router": "^15.1.4",
@@ -58,6 +61,7 @@
     "@angular/cli": "^15.1.5",
     "@angular/compiler-cli": "^15.1.4",
     "@angular/language-service": "^15.1.4",
+    "@types/googlemaps": "^3.39.13",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/marked": "^4.0.8",
