update lambda to wait for instance to stop before resize

--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -217,6 +217,7 @@
   },
   "version": "2.0",
   "app_name": "webportal",
+  "lambda_timeout": 300,
   "environment_variables": {
     "RECEIVER_EMAIL": "sdc-support@dot.gov"
   }
